@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
  * Copyright (c) 2020, 2020, Alibaba Group Holding Limited. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
@@ -41,7 +41,6 @@ import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -67,10 +66,12 @@ import org.graalvm.nativeimage.impl.RuntimeSerializationSupport;
 
 import com.oracle.graal.pointsto.phases.NoClassInitializationPlugin;
 import com.oracle.graal.pointsto.util.GraalAccess;
-import com.oracle.svm.core.annotate.AutomaticFeature;
+import com.oracle.svm.core.configure.ConditionalElement;
 import com.oracle.svm.core.configure.ConfigurationFile;
 import com.oracle.svm.core.configure.ConfigurationFiles;
 import com.oracle.svm.core.configure.SerializationConfigurationParser;
+import com.oracle.svm.core.feature.AutomaticallyRegisteredFeature;
+import com.oracle.svm.core.feature.InternalFeature;
 import com.oracle.svm.core.jdk.RecordSupport;
 import com.oracle.svm.core.reflect.serialize.SerializationRegistry;
 import com.oracle.svm.core.reflect.serialize.SerializationSupport;
@@ -84,10 +85,11 @@ import com.oracle.svm.hosted.FeatureImpl.BeforeAnalysisAccessImpl;
 import com.oracle.svm.hosted.ImageClassLoader;
 import com.oracle.svm.hosted.config.ConfigurationParserUtils;
 import com.oracle.svm.hosted.reflect.ReflectionFeature;
+import com.oracle.svm.hosted.reflect.proxy.DynamicProxyFeature;
+import com.oracle.svm.hosted.reflect.proxy.ProxyRegistry;
 import com.oracle.svm.util.ReflectionUtil;
 
 import jdk.internal.reflect.ReflectionFactory;
-import jdk.vm.ci.hotspot.HotSpotObjectConstant;
 import jdk.vm.ci.meta.Constant;
 import jdk.vm.ci.meta.JavaConstant;
 import jdk.vm.ci.meta.JavaKind;
@@ -95,15 +97,15 @@ import jdk.vm.ci.meta.ResolvedJavaField;
 import jdk.vm.ci.meta.ResolvedJavaMethod;
 import jdk.vm.ci.meta.ResolvedJavaType;
 
-@AutomaticFeature
-public class SerializationFeature implements Feature {
+@AutomaticallyRegisteredFeature
+public class SerializationFeature implements InternalFeature {
     static final HashSet<Class<?>> capturingClasses = new HashSet<>();
     private SerializationBuilder serializationBuilder;
     private int loadedConfigurations;
 
     @Override
     public List<Class<? extends Feature>> getRequiredFeatures() {
-        return Collections.singletonList(ReflectionFeature.class);
+        return List.of(ReflectionFeature.class, DynamicProxyFeature.class);
     }
 
     @Override
@@ -112,10 +114,10 @@ public class SerializationFeature implements Feature {
         ImageClassLoader imageClassLoader = access.getImageClassLoader();
         ConfigurationTypeResolver typeResolver = new ConfigurationTypeResolver("serialization configuration", imageClassLoader);
         SerializationDenyRegistry serializationDenyRegistry = new SerializationDenyRegistry(typeResolver);
-        serializationBuilder = new SerializationBuilder(serializationDenyRegistry, access, typeResolver);
+        serializationBuilder = new SerializationBuilder(serializationDenyRegistry, access, typeResolver, ImageSingletons.lookup(ProxyRegistry.class));
         ImageSingletons.add(RuntimeSerializationSupport.class, serializationBuilder);
-
         SerializationConfigurationParser denyCollectorParser = new SerializationConfigurationParser(serializationDenyRegistry, ConfigurationFiles.Options.StrictConfiguration.getValue());
+
         ConfigurationParserUtils.parseAndRegisterConfigurations(denyCollectorParser, imageClassLoader, "serialization",
                         ConfigurationFiles.Options.SerializationDenyConfigurationFiles, ConfigurationFiles.Options.SerializationDenyConfigurationResources,
                         ConfigurationFile.SERIALIZATION_DENY.getFileName());
@@ -135,12 +137,12 @@ public class SerializationFeature implements Feature {
 
     @SuppressWarnings("try")
     private static StructuredGraph createMethodGraph(ResolvedJavaMethod method, GraphBuilderPhase lambdaParserPhase, DebugContext debug) {
+        HighTierContext context = new HighTierContext(GraalAccess.getOriginalProviders(), null, OptimisticOptimizations.NONE);
         StructuredGraph graph = new StructuredGraph.Builder(debug.getOptions(), debug)
                         .method(method)
                         .recordInlinedMethods(false)
                         .build();
         try (DebugContext.Scope ignored = debug.scope("ParsingToMaterializeLambdas")) {
-            HighTierContext context = new HighTierContext(GraalAccess.getOriginalProviders(), null, OptimisticOptimizations.NONE);
             lambdaParserPhase.apply(graph, context);
         } catch (Throwable e) {
             throw debug.handle(e);
@@ -168,7 +170,7 @@ public class SerializationFeature implements Feature {
             return null;
         }
 
-        HotSpotObjectConstant fieldValue = (HotSpotObjectConstant) GraalAccess.getOriginalProviders().getConstantReflection().readFieldValue(targetField, (JavaConstant) constant);
+        JavaConstant fieldValue = GraalAccess.getOriginalProviders().getConstantReflection().readFieldValue(targetField, (JavaConstant) constant);
         Member memberField = GraalAccess.getOriginalProviders().getSnippetReflection().asObject(Member.class, fieldValue);
         return memberField.getDeclaringClass();
     }
@@ -190,7 +192,7 @@ public class SerializationFeature implements Feature {
         for (ConstantNode cNode : constantNodes) {
             Class<?> lambdaClass = getLambdaClassFromConstantNode(cNode);
 
-            if (lambdaClass != null) {
+            if (lambdaClass != null && Serializable.class.isAssignableFrom(lambdaClass)) {
                 try {
                     Method serializeLambdaMethod = lambdaClass.getDeclaredMethod("writeReplace");
                     RuntimeReflection.register(serializeLambdaMethod);
@@ -306,6 +308,10 @@ final class SerializationDenyRegistry implements RuntimeSerializationSupport {
         }
     }
 
+    @Override
+    public void registerProxyClass(ConfigurationCondition condition, List<String> implementedInterfaces) {
+    }
+
     public boolean isAllowed(Class<?> clazz) {
         boolean denied = deniedClasses.containsKey(clazz);
         if (denied && deniedClasses.get(clazz)) {
@@ -330,8 +336,9 @@ final class SerializationBuilder extends ConditionalConfigurationRegistry implem
     private final ConfigurationTypeResolver typeResolver;
     private final FeatureImpl.DuringSetupAccessImpl access;
     private boolean sealed;
+    private final ProxyRegistry proxyRegistry;
 
-    SerializationBuilder(SerializationDenyRegistry serializationDenyRegistry, FeatureImpl.DuringSetupAccessImpl access, ConfigurationTypeResolver typeResolver) {
+    SerializationBuilder(SerializationDenyRegistry serializationDenyRegistry, FeatureImpl.DuringSetupAccessImpl access, ConfigurationTypeResolver typeResolver, ProxyRegistry proxyRegistry) {
         this.access = access;
         Class<?> classDataSlotClazz = access.findClassByName("java.io.ObjectStreamClass$ClassDataSlot");
         descField = ReflectionUtil.lookupField(classDataSlotClazz, "desc");
@@ -339,6 +346,7 @@ final class SerializationBuilder extends ConditionalConfigurationRegistry implem
         stubConstructor = newConstructorForSerialization(SerializationSupport.StubForAbstractClass.class, null);
         this.denyRegistry = serializationDenyRegistry;
         this.typeResolver = typeResolver;
+        this.proxyRegistry = proxyRegistry;
 
         serializationSupport = new SerializationSupport(stubConstructor);
         ImageSingletons.add(SerializationRegistry.class, serializationSupport);
@@ -416,7 +424,7 @@ final class SerializationBuilder extends ConditionalConfigurationRegistry implem
     public void registerLambdaCapturingClass(ConfigurationCondition condition, String lambdaCapturingClassName) {
         abortIfSealed();
 
-        Class<?> conditionClass = typeResolver.resolveType(condition.getTypeName());
+        Class<?> conditionClass = typeResolver.resolveConditionType(condition.getTypeName());
         if (conditionClass == null) {
             return;
         }
@@ -439,10 +447,16 @@ final class SerializationBuilder extends ConditionalConfigurationRegistry implem
     }
 
     @Override
+    public void registerProxyClass(ConfigurationCondition condition, List<String> implementedInterfaces) {
+        Class<?> proxyClass = proxyRegistry.createProxyClassForSerialization(new ConditionalElement<>(condition, implementedInterfaces));
+        registerWithTargetConstructorClass(ConfigurationCondition.alwaysTrue(), proxyClass, Object.class);
+    }
+
+    @Override
     public void registerWithTargetConstructorClass(ConfigurationCondition condition, String targetClassName, String customTargetConstructorClassName) {
         abortIfSealed();
 
-        Class<?> conditionClass = typeResolver.resolveType(condition.getTypeName());
+        Class<?> conditionClass = typeResolver.resolveConditionType(condition.getTypeName());
         if (conditionClass == null) {
             return;
         }
@@ -467,7 +481,7 @@ final class SerializationBuilder extends ConditionalConfigurationRegistry implem
     public void registerWithTargetConstructorClass(ConfigurationCondition condition, Class<?> serializationTargetClass, Class<?> customTargetConstructorClass) {
         abortIfSealed();
 
-        Class<?> conditionClass = typeResolver.resolveType(condition.getTypeName());
+        Class<?> conditionClass = typeResolver.resolveConditionType(condition.getTypeName());
         if (conditionClass == null) {
             return;
         }
